# aruaru-tokyo

./: CLAUDE-Arabic.md  CLAUDE-Chinese.md  CLAUDE-English.md  CLAUDE-France.md  CLAUDE-Germany.md  CLAUDE-Italy.md  CLAUDE-Japan.md  CLAUDE-Korea.md  CLAUDE-Russia.md  CLAUDE-Spain.md  CLAUDE.md  Cargo.toml  PORTING-Arabic.md  PORTING-Chinese.md  PORTING-English.md  PORTING-France.md  PORTING-Germany.md  PORTING-Italy.md  PORTING-Japan.md  PORTING-Korea.md  PORTING-Russia.md  PORTING-Spain.md  PORTING.md  README-Arabic.md  README-Chinese.md  README-English.md  README-France.md  README-Germany.md  README-Italy.md  README-Japan.md  README-Korea.md  README-Russia.md  README-Spain.md  README.md
src/: i18n.rs  main.rs  meta_index.rs
