[package]
name = "aruaru-tokyo-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aruaru-tokyo-server"
path = "src/main.rs"

[dependencies]
poem = "3.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
